# Prettiest

./: README.md  pyproject.toml  vsjsonfmt.config.json
src/vsjsonfmt/: api.py  gui.py
src/vsjsonfmt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vsjsonfmt/: cli.py
