[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vsjsonfmt"
version = "0.1.0"
description = "Vintage Story JSON formatter (1.21-focused), Prettier-like"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Pure Winter" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
vsjsonfmt = "vsjsonfmt.cli:main"
vsjsonfmt-gui = "vsjsonfmt.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
gui = ["customtkinter>=5.2.2", "pyperclip>=1.8.2"]
